# pargs

./: .gitignore  README.md  pyproject.toml
debian/: .gitignore  README.Debian  changelog  control  copyright  gbp.conf  rules
debian/pargs-0.1.0/debian/: changelog  control  copyright  files  rules
src/pargs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pargs/cli/: pargs.py
src/pargs/util/: foo_helper.py
