[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pargs"
authors = [
    {name = "Johannes Jeppsson"},
]
description = "Python Args Playground"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["argsparse"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {text = "Apache-2.0"}
dynamic = ["version"]

[project.urls]
Repository = "https://example.com"

[project.scripts]
pargs = "bin.pargs:main_cli"

[tool.setuptools]
package-dir = {"" = "src", "bin" = "bin"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pargs.__version__"}
